2000-04-23  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSAttributedString.m: Corrected code of
	([-attribute:atIndex:longestEffectiveRange:inRange:]) so that it
	compares attributes correctly.

2000-04-20  Jonathan Gapen  <jagapen@whitewater.chem.wisc.edu>

	* Tools/plmerge.m: New tool to merge property lists.
	* Tools/plser.m: Fix error message. (deserialize => serialize)
	* Tools/GNUmakefile: Add plmerge.

2000-04-20  Richard Frith-Macdonald <rfm@gnu.org>

	* Tools/gdomap.c: Don't do chdir/chroot on sysv - it screws up
	their streams so we can't handle incoming connections.

2000-04-20  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSCalendarDate.m: Fix memory leak when initialising from
	string.

2000-04-20  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GSTcpPort.m: define INADDR_NONE to be -1 on systems where
	it is not defined.

2000-04-19  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSThread.m: rewrite
	* Source/NSCountedSet.m: minor fix in new unique method
	* Source/NSGCountedSet.m: ditto

2000-04-18  Adam Fedor  <fedor@gnu.org>

	* base/configure.in: add a test to see whether a symlink
	'/proc/self/exe' exists
        * base/Headers/gnustep/base/config.h.in: Add a definition for the
	test result
        * base/Source/NSBundle.m: Move the discovery of the process'
	executable file to +initialize; add code to discover it from
	/proc, if possible (patches from Jonathan Gapen 
	<jagapen@whitewater.chem.wisc.edu>)

2000-04-18  Richard Frith-Macdonald <rfm@gnu.org>

	* Documentation/gsdoc/NSCountedSet.gsdoc: Method descriptions fleshed
	out, including GNUstep additional methods and related functions.
	* Documentation/gsdoc/NSDeserializer.gsdoc: GNUstep specific extension
	method documented.
	* GSDoc/gnustep.gsdoc: Fixed use of 'standards' element.
	* Headers/NSSerialization.h: Removed some extensions.
	* Headers/NSSet.h: Added some extensions for uniquing.
	* Source/NSCountedSet.m: Added uniquing methods and functions.